--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:08:05</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.testSetup()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&gt;&gt;testSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:09:10</td>   <td>64878</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.classTearDown()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&lt;&lt;classTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:08:06</td>   <td>1007</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.classSetUp()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&gt;&gt;classSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:09:11</td>   <td>65230</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.testTearDown()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&lt;&lt;testTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>22/12/02 13:08:38</td>   <td>33003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationTest.createOrganizationTest()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">createOrganizationTest</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:08:22</td>   <td>16872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodSetUp()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&gt;&gt;methodSetUp</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="78b3da">  <td>22/12/02 13:09:08</td>   <td>62541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodTearDown()[pri:0, instance:testNGImplementation.CreateOrganisationTest@4b8ee4de]">&lt;&lt;methodTearDown</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodSetUp()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&gt;&gt;methodSetUp</td> 
+<td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:31</td>   <td>12474</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.classTearDown()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&lt;&lt;classTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodSetUp()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&gt;&gt;methodSetUp</td> 
+<td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:31</td>   <td>12717</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.testTearDown()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&lt;&lt;testTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:00</td>   <td>-18509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.classSetUp()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&gt;&gt;classSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>22/12/05 11:14:20</td>   <td>1809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderCreateOrgTest.createOrganizationTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">createOrganizationTest</td> 
+  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>22/12/05 11:14:20</td>   <td>1809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderCreateOrgTest.createOrganizationTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">createOrganizationTest</td> 
+  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:13:59</td>   <td>-19517</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.testSetup()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:29</td>   <td>11166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodTearDown()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&lt;&lt;methodTearDown</td> 
+<td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>22/12/05 11:14:29</td>   <td>11166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodTearDown()[pri:0, instance:testNGImplementation.DataProviderCreateOrgTest@54e1c68b]">&lt;&lt;methodTearDown</td> 
+<td>&nbsp;</td>  <td>main@1258372214</td>   <td></td> </tr>
 </table>
