--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dulsi\AppData\Local\Temp\testng-eclipse--28923474\testng-customsuite.xml</span>
+                    <span>C:\Users\dulsi\AppData\Local\Temp\testng-eclipse-912203907\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testNGImplementation.CreateOrganisationTest" class="method navigator-link" hash-for-method="createOrganizationTest">createOrganizationTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testNGImplementation.DataProviderCreateOrgTest" class="method navigator-link" hash-for-method="createOrganizationTest(ACTS, Biotechnology, Support Group)">createOrganizationTest(ACTS, Biotechnology, Support Group)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testNGImplementation.DataProviderCreateOrgTest" class="method navigator-link" hash-for-method="createOrganizationTest(BTCS, Biotechnology, Team Selling)">createOrganizationTest(BTCS, Biotechnology, Team Selling)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +127,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testNGImplementation.CreateOrganisationTest</span>
+              <span class="class-name">testNGImplementation.DataProviderCreateOrgTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createOrganizationTest">
-                  </a> <!-- createOrganizationTest -->
+                  <a name="createOrganizationTest(ACTS, Biotechnology, Support Group)">
+                  </a> <!-- createOrganizationTest(ACTS, Biotechnology, Support Group) -->
                   <span class="method-name">createOrganizationTest</span>
+                  <span class="parameters">(ACTS, Biotechnology, Support Group)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createOrganizationTest(BTCS, Biotechnology, Team Selling)">
+                  </a> <!-- createOrganizationTest(BTCS, Biotechnology, Team Selling) -->
+                  <span class="method-name">createOrganizationTest</span>
+                  <span class="parameters">(BTCS, Biotechnology, Team Selling)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +151,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dulsi\AppData\Local\Temp\testng-eclipse--28923474\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dulsi\AppData\Local\Temp\testng-eclipse-912203907\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +160,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testNGImplementation.CreateOrganisationTest&quot;/&gt;
+      &lt;class name=&quot;testNGImplementation.DataProviderCreateOrgTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +200,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createOrganizationTest')
-data.setCell(0, 2, 'testNGImplementation.CreateOrganisationTest')
-data.setCell(0, 3, 29522);
+data.setCell(0, 2, 'testNGImplementation.DataProviderCreateOrgTest')
+data.setCell(0, 3, 10698);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'createOrganizationTest')
+data.setCell(1, 2, 'testNGImplementation.DataProviderCreateOrgTest')
+data.setCell(1, 3, 9357);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,34 +239,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testNGImplementation.CreateOrganisationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testNGImplementation.DataProviderCreateOrgTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">testSetup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">classSetUp</span>
-                <span class="method-start">1009 ms</span>
+                <span class="method-start">1012 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">methodSetUp</span>
-                <span class="method-start">16875 ms</span>
+                <span class="method-start">5110 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createOrganizationTest</span>
-                <span class="method-start">33006 ms</span>
+                <span class="method-name">createOrganizationTest(ACTS, Biotechnology, Support Group)</span>
+                <span class="method-start">7621 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">methodTearDown</span>
-                <span class="method-start">62528 ms</span>
+                <span class="method-start">18323 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">methodSetUp</span>
+                <span class="method-start">19521 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createOrganizationTest(BTCS, Biotechnology, Team Selling)</span>
+                <span class="method-start">21330 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">methodTearDown</span>
+                <span class="method-start">30687 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">classTearDown</span>
-                <span class="method-start">64881 ms</span>
+                <span class="method-start">31995 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">testTearDown</span>
-                <span class="method-start">65233 ms</span>
+                <span class="method-start">32238 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
